kubernetes/development/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: solar-system-dev
  name: solar-system-dev
  namespace: _{_NAMESPACE_}_
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: solar-system-dev 
  type: ClusterIP
