kubernetes/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: solar-system-dev
  namespace: _{_NAMESPACE_}_
spec:
    rules:
    - host: solar-system-dev.skomantas.me
      http:
        paths:
        - backend:
            service:
              name: solar-system-dev
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - solar-system-dev.skomantas.me
      secretName: ingress-local-tls
